test/prism_regression/invalid/module_empty_constant_path.rb
# typed: true
# disable-parser-comparison: true

module ::
end
